# henry_bot_M2

./: .env.example  .gitignore  DEVELOPMENT_WORKFLOW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: chunks.json  documents.json  vector_store_index_mapping.json  vector_store_metadata.json
data/documents/: Beneficios de la inmersión en hielo.docx  CONSENTIMIENTO INFORMADO PARA PARTICIPACIÓN EN PANDORA EXPERIENCE.docx  Elevator pitch y storytelling comercial - PANDORA EXPERIENCE.docx  FORMULARIO DE EVALUACIÓN MÉDICA PARA INMERSIÓN EN HIELO.docx  GUION DE WHATSAPP Y ÁRBOL DEL BOT – PANDORA EXPERIENCE.docx  IMPACTO FÍSICO, EMOCIONAL Y ESPIRITUAL DE LA EXPERIENCIA PANDORA.docx  LISTA DE CONTRAINDICACIONES PARA PARTICIPAR EN LA INMERSIÓN EN HIELO DE PANDORA EXPERIENCE.docx  Lista de objeciones y respuestas automáticas - PANDORA EXPERIENCE.docx  PLAN DE REDES SOCIALES Y CAMPAÑAS ACTIVAS – PANDORA EXPERIENCE.docx  PROCEDIMIENTOS DE SEGURIDAD EN SESIONES DE PANDORA EXPERIENCE.docx  Respiración y Meditación - Fundamentos.docx  TESTIMONIOS CON IMPACTO – PANDORA EXPERIENCE.docx  WHAT IS PANDORA?.txt  ¿QUÉ ES PANDORA EXPERIENCE_.docx
logs/: metrics.csv  metrics_api.csv  metrics_errors.csv
src/: __init__.py  main.py
src/core/: __init__.py  agent.py  config.py  exceptions.py
src/modules/: __init__.py
src/modules/api/: __init__.py  dependencies.py  middleware.py  schemas.py  server.py
src/modules/logging/: __init__.py  logger.py
src/modules/metrics/: __init__.py  tracker.py
src/modules/prompting/: __init__.py  engine.py  safety.py
src/modules/prompting/templates/: system_prompt.txt
src/modules/rag/: __init__.py  chunk_store.py  chunking.py  embeddings.py  processor.py  retriever.py  storage.py
tests/: __init__.py
tests/integration/: test_rag_chunking.py  test_rag_retriever.py
tests/test_data/: test_ai_ethics.txt  test_document.txt  test_neural_networks.md
tests/unit/: test_chunk_store.py  test_chunking_only.py  test_chunking_simple.py
