[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "henry-bot-m2"
version = "2.0.0"
description = "Enhanced LLM agent with RAG capabilities and comprehensive metrics"
authors = [
    {name = "Esteban Camargo", email = "estebmaister@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "python-multipart>=0.0.6",
    "pypdf2>=3.0.1",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/estebmaister/henry_bot_M2"
Repository = "https://github.com/estebmaister/henry_bot_M2.git"
Issues = "https://github.com/estebmaister/henry_bot_M2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N801"]